@@ -1,15 +1,21 @@
 package com.whales.search.api;
 
+import com.whales.comment.domain.CommentRepository;
 import com.whales.post.api.PostResponse;
+import com.whales.reaction.api.ReactionSummary;
+import com.whales.reaction.application.PostReactionService;
 import com.whales.search.application.SearchService;
-import com.whales.user.domain.User;
 import com.whales.security.WhalesUserPrincipal;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -17,6 +23,8 @@ import java.util.UUID;
 public class SearchController {
 
     private final SearchService searchService;
+    private final CommentRepository commentRepository;
+    private final PostReactionService postReactionService;
 
     /** 게시물 검색 */
     @GetMapping
@@ -29,8 +37,13 @@ public class SearchController {
 
         return searchService.search(keyword, userId)
                 .stream()
-                .map(PostResponse::from)
-                .toList();
+                .map(post -> {
+                    long commentCount = commentRepository.countByPost_Id(post.getId());
+                    ReactionSummary reactions = postReactionService.getReactionSummaryWithoutUser(post.getId());
+
+                    return PostResponse.from(post, commentCount, reactions);
+                })
+                .collect(Collectors.toList());
     }
 
     /** 검색 기록 조회 */
